[tool.poetry]
name = "program-constrained-transformer-inference"
version = "0.1.0"
description = ""
authors = ["Andrei Betlen <abetlen@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "program_constrained_transformer_inference"}]

[tool.poetry.dependencies]
python = "^3.8"
tree-sitter = "^0.20.1"
torch = {version = "^2.0.0+cpu", source = "torch-cpu"}
tiktoken = "^0.3.1"
numpy = "^1.24.2"
transformers = "^4.26.1"
jsonschema = "^4.17.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"


[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
